Better Examples & Gitignore for datastore

--- a/WebApp/Application/templates/base.html
+++ b/WebApp/Application/templates/base.html
@@ -68,7 +68,7 @@
                             <a href="/settings/"><span class="glyphicon glyphicon-cog"></span><span class="hidden-lg hidden-md hidden-sm">&nbsp;Settings</span></a>
                         </li>
                         {% endif %}
-                        <li><a href="/confirm_logout/"><span class="glyphicon glyphicon-log-out"></span><span class="hidden-lg hidden-md hidden-sm">&nbsp;Logout</span></a></li>
+                        <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span><span class="hidden-lg hidden-md hidden-sm">&nbsp;Logout</span></a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
                 {% endif %}
