--- a/WebApp/Application/templates/index.html
+++ b/WebApp/Application/templates/index.html
@@ -3,5 +3,15 @@
   <h1>Index</h1>
   <p class="important">
     Welcome
+    <ul>
+    	<li><a href="/protected">Protected View (Login only) (/protected)</a></li>
+    	<li><a href="/login">Login via Flask-Security(/login)</a></li>
+    	<li><a href="/logout">Logout via Flask-Security(/logout)</a></li>
+
+    	<li><a href="/classy-view/">Classy View Example (/classy-view/)</a></li>
+    	<li><a href="/classy-view/custom-route">Classy Custom Route (/classy-view/custom-route)</a></li>
+    	<li><a href="/classy-view/hello%20I%20Am%20Data.">Classy Get Route With Data(/classy-view/hello I Am Data.)</a></li>
+    </ul>
+    <h2>{{ content }}</h2>
 </p>
 {% endblock %}
