--- a/WebApp/Application/static/css/main.less
+++ b/WebApp/Application/static/css/main.less
@@ -1,3 +1,6 @@
+// out: base.min.css, compress: true
+@import "variables.less";
+
 .top-buttons { margin-top:5px; margin-bottom: 5px;}
 .login-form { max-width: 300px; margin:0 auto;}
 .login-form ul li {color: red; font-weight: bold;;}
