--- a/WebApp/Application/templates/base.html
+++ b/WebApp/Application/templates/base.html
@@ -18,10 +18,8 @@
             <meta name="viewport" content="width=device-width, initial-scale=1">
 
             <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-
-            <link rel="stylesheet" href="/static/css/main.css">
-            <!-- <link rel="stylesheet" href="/static/css/yeti/bootstrap.min.css"> -->
-
+            <link rel="stylesheet" href="/static/css/main.min.css">
+            
             <script src="/static/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
             <script src="/static/js/vendor/jquery-1.11.0.min.js"></script>
             <script src="/static/js/vendor/bootstrap.min.js"></script>
