--- a/WebApp/Application/templates/base.html
+++ b/WebApp/Application/templates/base.html
@@ -3,7 +3,6 @@
     (url_for('ClassyViewExample:index'), 'item1', 'Item 1'),
 ] -%}
 
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -17,13 +16,11 @@
             <meta name="description" content="">
             <meta name="viewport" content="width=device-width, initial-scale=1">
 
-            <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+            <link rel="stylesheet" href="/static/vendor/bootstrap/css/bootstrap.min.css">
             <link rel="stylesheet" href="/static/css/main.min.css">
             
-            <script src="/static/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-            <script src="/static/js/vendor/jquery-1.11.0.min.js"></script>
-            <script src="/static/js/vendor/bootstrap.min.js"></script>
-
+            <script src="/static/vendor/jquery/jquery.min.js"></script>
+            <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
             <script src="/static/js/main.js"></script>
             {% endblock %}
     </head>
@@ -31,6 +28,7 @@
             <!--[if lt IE 7]>
                     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
             <![endif]-->
+
         <nav class="navbar navbar-default navbar-fixed" role="navigation">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -76,11 +74,6 @@
             {% block content %}
             <p>Template has not been configured</p>
             {% endblock %}
-            <!-- <footer>
-                {% block footer %}
-                <p>&copy; Company 2014</p>
-                {% endblock %}
-            </footer> -->
         </div>
 
         
