New inclusions, now examples for WTForms and also includes a new render_template macro

--- a/WebApp/Application/templates/index.html
+++ b/WebApp/Application/templates/index.html
@@ -1,16 +1,25 @@
-{% extends "base.html" %}
+{% extends "bases/base.html" %}
 {% block content %}
   <h1>Index</h1>
   <p class="important">
     Welcome
     <ul>
-    	<li><a href="/protected">Protected View (Login only) (/protected)</a></li>
-    	<li><a href="/login">Login via Flask-Security(/login)</a></li>
-    	<li><a href="/logout">Logout via Flask-Security(/logout)</a></li>
+    	<li><a href="{{ url_for('Index:protected') }}">Protected View (Login only) (/protected)</a></li>
+    	<li><a href="{{ url_for_security('login') }}">Login via Flask-Security(/login) (user: admin@localhost, pw: admin)</a></li>
+    	<li><a href="{{ url_for_security('logout') }}">Logout via Flask-Security(/logout)</a></li>
 
-    	<li><a href="/classy-view/">Classy View Example (/classy-view/)</a></li>
-    	<li><a href="/classy-view/custom-route">Classy Custom Route (/classy-view/custom-route)</a></li>
-    	<li><a href="/classy-view/hello%20I%20Am%20Data.">Classy Get Route With Data(/classy-view/hello I Am Data.)</a></li>
+        <hr />
+
+    	<li><a href="{{ url_for('ClassyViewExample:index') }}">Classy View Example (/classy-view/)</a></li>
+    	<li><a href="{{ url_for('ClassyViewExample:custom_route') }}">Classy Custom Route (/classy-view/custom-route)</a></li>
+    	<li><a href="{{ url_for('ClassyViewExample:get', url_data='Hello I am some data') }}">Classy Get Route With Data(/classy-view/hello I Am Data.)</a></li>
+
+        <hr />
+
+        <li><a href="{{ url_for('SampleForm:index') }}">Sample WTForm</a></li>
+        <li><a href="{{ url_for('SampleForm:model_form') }}">Sample WTForm using model_form</a></li>
+
+
     </ul>
     <h2>{{ content }}</h2>
 </p>
