--- a/WebApp/Application/templates/security/base_security_form.html
+++ b/WebApp/Application/templates/security/base_security_form.html
@@ -1,11 +1,8 @@
-{% extends "base.html" %}
+{% extends "bases/base_form.html" %}
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
-
-
 
 {% block content %}
 	<div class="login-form">
-
 		<h2>{% block formtitle %}{% endblock %}</h2>
 		<h5>{% block formsubtitle %}{% endblock %}</h5>
         {% block form_message %}
