--- a/WebApp/Application/templates/bases/base.html
+++ b/WebApp/Application/templates/bases/base.html
@@ -12,35 +12,31 @@
             {% block head %}
             <meta charset="utf-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-            <title></title>
+            <title>{{ self.page_title() + ' | ' if self.page_title() }}{{ config.APP_NAME }}</title>
             <meta name="description" content="">
             <meta name="viewport" content="width=device-width, initial-scale=1">
-
             <link rel="stylesheet" href="/static/vendor/bootstrap/css/bootstrap.min.css">
             <link rel="stylesheet" href="/static/css/main.min.css">
-            
             <script src="/static/vendor/jquery/jquery.min.js"></script>
             <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
             <script src="/static/js/main.js"></script>
             {% endblock %}
     </head>
     <body>
-            <!--[if lt IE 7]>
-                    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-            <![endif]-->
-
+        <!--[if lt IE 8]>
+                <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
         <nav class="navbar navbar-default navbar-fixed" role="navigation">
             <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     {% if current_user.is_authenticated() == True %}
-                    <!-- Hide the expandy thing if they're not logged in. -->
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+                        {# Hide the expandy thing if they're not logged in. #}
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
                     {% endif %}
                     <a class="navbar-brand" href="{{ url_for('Index:index') }}">Website</a>
                 </div>
@@ -71,6 +67,19 @@
             </div><!-- /.container-fluid -->
         </nav>
         <div class="container">
+            <div class='alert-container flashed-message'>
+                {% for type, message in get_flashed_messages(with_categories = true) %}
+                    <div class="alert alert-{{ 'danger' if type == 'error' else type.lower() }} alert-dismissable">
+                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                        <strong>{{ 'Error' if type == 'danger' else type.capitalize() }}:</strong> {{ message|safe }}
+                    </div>
+                {% endfor %}
+            </div>
+            {% if self.page_title() %}
+                {% block page_title_override %}
+                    <h1>{% block page_title %}{% endblock %}</h1>
+                {% endblock %}
+            {% endif %}
             {% block content %}
             <p>Template has not been configured</p>
             {% endblock %}
