--- a/Flask-Boilerplate/Application/templates/bases/base.html
+++ b/Flask-Boilerplate/Application/templates/bases/base.html
@@ -15,11 +15,9 @@
             <title>{{ self.page_title() + ' | ' if self.page_title() }}{{ config.APP_NAME }}</title>
             <meta name="description" content="">
             <meta name="viewport" content="width=device-width, initial-scale=1">
-            <link rel="stylesheet" href="/static/vendor/bootstrap/css/bootstrap.min.css">
-            <link rel="stylesheet" href="/static/css/main.min.css">
-            <script src="/static/vendor/jquery/jquery.min.js"></script>
-            <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
-            <script src="/static/js/main.js"></script>
+
+            {# Get the automatically generated HTML Assets #}
+            {{ html_assets|safe }}
             {% endblock %}
     </head>
     <body>
