--- a/flask_boilerplate/boilerplate/Application/templates/security/base_security_form.html
+++ b/flask_boilerplate/boilerplate/Application/templates/security/base_security_form.html
@@ -1,5 +1,5 @@
 {% extends "bases/base_form.html" %}
-{% from "security/_macros.html" import render_field_with_errors, render_field %}
+{% from "macros.html" import render_field %}
 
 {% block content %}
 	<div class="login-form">
