--- a/flask_boilerplate/boilerplate/Application/templates/security/change_password.html
+++ b/flask_boilerplate/boilerplate/Application/templates/security/change_password.html
@@ -9,9 +9,9 @@ Update your existing password.
 
 <form method=post action="{{ url_for_security('change_password') }}"> 
     {{ change_password_form.hidden_tag() }}
-    {{ render_field_with_errors(change_password_form.password, placeholder="Current Password", class="form-control") }}
-    {{ render_field_with_errors(change_password_form.new_password, placeholder="New Password", class="form-control") }}
-    {{ render_field_with_errors(change_password_form.new_password_confirm, placeholder="Confirm New Password", class="form-control") }}
+    {{ render_field(change_password_form.password, placeholder="Current Password", class="form-control") }}
+    {{ render_field(change_password_form.new_password, placeholder="New Password", class="form-control") }}
+    {{ render_field(change_password_form.new_password_confirm, placeholder="Confirm New Password", class="form-control") }}
     {{ render_field(change_password_form.submit, class="btn btn-success login-button") }}
 
 </form>
