--- a/flask_boilerplate/boilerplate/Application/templates/security/forgot_password.html
+++ b/flask_boilerplate/boilerplate/Application/templates/security/forgot_password.html
@@ -8,7 +8,7 @@ Enter your email address and a password reset link will be emailed to you.
 {% block form_content %}
 <form method=post action="{{ url_for_security('forgot_password') }}">
     {{ forgot_password_form.hidden_tag() }}
-    {{ render_field_with_errors(forgot_password_form.email, placeholder="example@example.com", class="form-control") }}
+    {{ render_field(forgot_password_form.email, placeholder="example@example.com", class="form-control") }}
     {{ render_field(forgot_password_form.submit, class="btn btn-success login-button") }}
 
 </form>
