--- a/flask_boilerplate/boilerplate/Application/templates/security/login_user.html
+++ b/flask_boilerplate/boilerplate/Application/templates/security/login_user.html
@@ -4,9 +4,9 @@
 {% block form_content %}
 <form method=post action="{{ url_for_security('login') }}">
     {{ login_user_form.hidden_tag() }}
-    {{ render_field_with_errors(login_user_form.email, placeholder="example@example.com", class="form-control") }}
-    {{ render_field_with_errors(login_user_form.password, placeholder="", class="form-control") }}
-    {{ render_field_with_errors(login_user_form.remember) }}
+    {{ render_field(login_user_form.email, placeholder="example@example.com", class="form-control") }}
+    {{ render_field(login_user_form.password, placeholder="", class="form-control") }}
+    {{ render_field(login_user_form.remember) }}
     {{ render_field(login_user_form.next) }}
     {{ render_field(login_user_form.submit, class="btn btn-success login-button") }}
     {% if security.recoverable %}
