--- a/flask_boilerplate/boilerplate/Application/templates/security/reset_password.html
+++ b/flask_boilerplate/boilerplate/Application/templates/security/reset_password.html
@@ -9,8 +9,8 @@ Please enter your new password.
 
 <form method=post action="{{ url_for_security('reset_password', token=reset_password_token) }}"> 
     {{ reset_password_form.hidden_tag() }}
-    {{ render_field_with_errors(reset_password_form.password, placeholder="Password", class="form-control") }}
-    {{ render_field_with_errors(reset_password_form.password_confirm, placeholder="Confirm Password", class="form-control") }}
+    {{ render_field(reset_password_form.password, placeholder="Password", class="form-control") }}
+    {{ render_field(reset_password_form.password_confirm, placeholder="Confirm Password", class="form-control") }}
     {{ render_field(reset_password_form.submit, class="btn btn-success login-button") }}
 
 </form>
