--- a/flask_boilerplate/boilerplate/Application/templates/macros.html
+++ b/flask_boilerplate/boilerplate/Application/templates/macros.html
@@ -17,7 +17,7 @@
                     <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
                 </div>
             {% else %}
-                {% elif field.type == 'BooleanField' %}
+                {% if field.type == 'BooleanField' %}
                     <div class="checkbox">
                         <label>
                             {{ field(**kwargs)|safe }}
