Some seriously new cool stuff imo

--- a/Application/modules/frontend/templates/frontend/base.html
+++ b/Application/modules/frontend/templates/frontend/base.html
@@ -1,8 +1,8 @@
 {% extends "_bases/_base.html" %}
 
 {% block body %}
-
-    <nav class="navbar navbar-default navbar-top">
+    {% block navbar %}
+    <nav class="navbar navbar-inverse navbar-static-top" id="main-navbar">
         <div class="container">
             <ul class="nav navbar-nav">
                 {% for item in current_menu.submenu('frontend').children if item.visible recursive %}
@@ -22,8 +22,8 @@
             </ul>
         </div>
     </nav>
+    {% endblock %}
     <div class="container">
-    <h1>Welcome to the front end</h1>
     {% block content %}
 
     {% endblock %}
