--- a/Application/modules/frontend/modules/submodule/templates/submodule/index.html
+++ b/Application/modules/frontend/modules/submodule/templates/submodule/index.html
@@ -3,6 +3,6 @@
 {% block content %}
 <div class="jumbotron">
     <h2>Submodule Example</h2>
-    <p>This is an example of a nested blueprint. This nested blueprint takes an argument of <code>id</code>. It's current value is <code></code></p>
+    <p>This is an example of a nested blueprint. This nested blueprint takes an argument of <code>id</code>. It's current value is <code>{{ id }}</code></p>
 </div>
 {% endblock %}
