--- a/Application/modules/frontend/modules/submodule/templates/submodule/index.html
+++ b/Application/modules/frontend/modules/submodule/templates/submodule/index.html
@@ -4,5 +4,7 @@
 <div class="jumbotron">
     <h2>Submodule Example</h2>
     <p>This is an example of a nested blueprint. This nested blueprint takes an argument of <code>id</code>. It's current value is <code>{{ id }}</code></p>
+    <p>Using nested blueprints brings a greater structure to your flask apps, and allow plugging of one or more blueprints at the same time at the topmost level of you app.</p>
 </div>
+
 {% endblock %}
